<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/turn_on_dark_mode"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/dark_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:text="@string/dark_mode"
        android:textSize="16sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reminder"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/switchReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:text="@string/reminder_switch"
        android:textSize="16sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <Button
        android:id="@+id/btn_language"
        style="@style/buttonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/ic_language"
        android:text="@string/change_language"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="16sp" />
</LinearLayout>