<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ProgressBar
        android:id="@+id/progress_detail"
        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />


    <ImageView
        android:id="@+id/ondataerror"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/alert_message_body"
        android:src="@drawable/ic_dataerror"
        android:visibility="gone" />


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:theme="@style/Theme.GithubUsers.AppBarOverlay">


            <LinearLayout
                android:id="@+id/layoutdetail"
                style="@style/appBarTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="25dp"
                app:layout_scrollFlags="scroll|snap">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <ToggleButton
                        android:id="@+id/toggle_favorite"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/favorite_yes_no"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textOff=""
                        android:textOn="" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avatar"
                        android:layout_width="100dp"
                        android:layout_height="110dp"
                        tools:src="@drawable/user1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="3dp"
                            android:text="@string/username"
                            android:textColor="?attr/colorAccent"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            tools:text="namaUser" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/follower"
                        style="@style/followerTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Follower 100" />

                    <TextView
                        android:id="@+id/following"
                        style="@style/followingTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        tools:text="Following 50" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="3dp"
                    android:gravity="center"
                    android:text="@string/username_github"
                    android:textColor="?attr/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="19dp"
                    android:gravity="center"
                    tools:text="username" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/profil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Profile"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/showprofile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:gravity="start"
                        android:text="@string/look_profil"
                        android:textColor="?attr/colorAccent"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/Company"
                            android:src="@drawable/ic_company" />

                        <TextView
                            android:id="@+id/company"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:textSize="15sp"
                            tools:text="Thorin Creative Studio" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            style="@style/locationIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/Location" />

                        <TextView
                            android:id="@+id/location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:textSize="15sp"
                            tools:text="Bandung, Indonesia" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            style="@style/repoIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/Repository" />

                        <TextView
                            android:id="@+id/repository"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:textSize="15sp"
                            tools:text="Repo: 200" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/profile_nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:contentDescription="@string/share_body1"
            android:src="@drawable/ic_share" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>